# FastECS

./: .gitignore  CMakeLists.txt  FastECS_Notes.md  README.md
include/: ComponentManager.h  Entity.h  EntityManager.h  JobSystem.h  MemoryPool.h  Registry.h  SparseSet.h  View.h
src/: MemoryPool.cpp  main.cpp
